[gd_scene load_steps=9 format=3 uid="uid://6jbni3gvoy04"]

[ext_resource type="StyleBox" uid="uid://belq1iq21fks6" path="res://ui/styles/button_normal.tres" id="1_gv2jc"]
[ext_resource type="Script" path="res://ui/pause_panel.gd" id="1_xc78d"]
[ext_resource type="StyleBox" uid="uid://ggprvljfilwg" path="res://ui/styles/button_hover.tres" id="2_b7xq3"]
[ext_resource type="StyleBox" uid="uid://iskf4f1kk7qh" path="res://ui/styles/button_pressed.tres" id="3_u025b"]
[ext_resource type="StyleBox" uid="uid://dpio2y8cu4np5" path="res://ui/styles/button_disabled.tres" id="4_ddtim"]
[ext_resource type="StyleBox" uid="uid://b0ati1sfqjmo0" path="res://ui/styles/button_focus.tres" id="5_2fg22"]
[ext_resource type="AudioStream" uid="uid://dd0owjrmqubax" path="res://sounds/button_click.mp3" id="7_yicfv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ffxp5"]
bg_color = Color(0.305882, 0.305882, 0.305882, 0.654902)

[node name="pause_panel" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xc78d")

[node name="panel_container" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ffxp5")

[node name="center_container" type="CenterContainer" parent="panel_container"]
layout_mode = 2

[node name="v_box_container" type="VBoxContainer" parent="panel_container/center_container"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="resume_button" type="Button" parent="panel_container/center_container/v_box_container"]
layout_mode = 2
theme_override_styles/normal = ExtResource("1_gv2jc")
theme_override_styles/hover = ExtResource("2_b7xq3")
theme_override_styles/pressed = ExtResource("3_u025b")
theme_override_styles/disabled = ExtResource("4_ddtim")
theme_override_styles/focus = ExtResource("5_2fg22")
text = "RESUME"

[node name="retry_button" type="Button" parent="panel_container/center_container/v_box_container"]
layout_mode = 2
theme_override_styles/normal = ExtResource("1_gv2jc")
theme_override_styles/hover = ExtResource("2_b7xq3")
theme_override_styles/pressed = ExtResource("3_u025b")
theme_override_styles/disabled = ExtResource("4_ddtim")
theme_override_styles/focus = ExtResource("5_2fg22")
text = "RETRY"

[node name="menu_button" type="Button" parent="panel_container/center_container/v_box_container"]
layout_mode = 2
theme_override_styles/normal = ExtResource("1_gv2jc")
theme_override_styles/hover = ExtResource("2_b7xq3")
theme_override_styles/pressed = ExtResource("3_u025b")
theme_override_styles/disabled = ExtResource("4_ddtim")
theme_override_styles/focus = ExtResource("5_2fg22")
text = "MENU"

[node name="button_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_yicfv")
volume_db = -10.0
pitch_scale = 3.0

[connection signal="pressed" from="panel_container/center_container/v_box_container/resume_button" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="panel_container/center_container/v_box_container/retry_button" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="panel_container/center_container/v_box_container/menu_button" to="." method="_on_menu_button_pressed"]
